削除の際の関数を移動

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,8 +307,9 @@ input[type=checkbox] {
 }
 
 textarea {
-  overflow: auto;
-  resize: vertical;
+  resize: none;
+  width:400px;
+  height:120px;
 }
 
 fieldset {
